# allsetra-logistic

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: test-imei.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/zoho/: client.rs  commands.rs  config.rs  error.rs  mapper.rs  mod.rs  models.rs
src/components/: LowStockReminder.tsx  NotesPanel.tsx  OrderWorkspace.tsx  OrderpickList.tsx  ProductPicker.tsx  SalesNoteAlert.tsx  Sidebar.tsx  StatusBadge.tsx  TopNav.tsx  UnitsTable.tsx  UpdatePrompt.tsx
src/components/inventory/: InventoryDetail.tsx  InventoryTab.tsx  InventoryTable.tsx  MovementsList.tsx  OpenPurchaseOrders.tsx  PurchaseOrderForm.tsx  StockAdjustForm.tsx
src/components/orders/: EmptyState.tsx  NewOrderForm.tsx  NotesPanel.tsx  OrderWorkspace.tsx  OrderpickList.tsx  OrdersTab.tsx  Sidebar.tsx  StatusBadge.tsx  UnitsTable.tsx
src/components/settings/: AccountsSection.tsx  AppInfoSection.tsx  ProfilePicker.tsx  ProfileSection.tsx  RoleBadge.tsx  SettingsTab.tsx  ThemeSection.tsx
src/components/shipped/: ShippedSidebar.tsx  ShippedTab.tsx  ShippedWorkspace.tsx
src/components/waybill/: WaybillDocument.tsx  (+3 more)
src/config/: company.ts  users.ts
src/contexts/: CurrentUserContext.tsx
src/data/: mockData.ts  mockInventory.ts
src/hooks/: useAppUpdate.ts  useInventory.ts  useOrders.ts  useTheme.ts
src/lib/: format.ts  imei.ts  productStrategy.ts  relativeDate.ts
src/services/: index.ts  inventoryService.ts  mockInventoryService.ts  mockOrderService.ts  orderService.ts  zohoCatalogService.ts  zohoOrderService.ts
src/types/: inventory.ts  order.ts  product.ts
