[package]
name = "routeconnect-logistiek"
version = "0.1.0"
description = "Logistiek Allsetra — interne werkomgeving voor het Allsetra logistiek team"
authors = ["Allsetra"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

# Zoho integration
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
thiserror = "1"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }

# Desktop-only (updater makes no sense on iOS/Android — they use stores)
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
